# llms-locally

./: Modelfile  README.md
fine-tuning-deepseek-r1/: .gitignore  main.py
fine-tuning-deepseek-r1/unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
langchain-and-agno/: inference.py
ollama-api/: Cargo.toml
ollama-api/src/: main.rs
pdf-rag/: Cargo.toml
pdf-rag/src/: main.rs
