[package]
name = "pdf-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
langchain-rust = { version = "4.6.0", features = ["pdf-extract"] }
pdf-extract = "0.8.0"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
surrealdb = "2.1.4"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
